# ESP32-Boat-Instrument

./: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  eth_get.c  eth_get.h  fonts.h  idf_component.yml  images.c  images.h  main.c  screens.c  screens.h  ui.c  ui.h  ui_font_montserrat.c  ui_image_apparent_arrow.c  ui_image_boat.c  ui_image_menu_button.c  ui_image_true_arrow.c  vars.c  vars.h  wifi_get.c  wifi_get.h
